# ospool-manager

./: .gitignore  README.md  build-binary.sh  build-docker.sh  build_entry.py  config.toml  config.toml.example  jobs.csv  ospool.spec  ospool_manager_overview.pptx  pyproject.toml  test_local.sh
.github/workflows/: release.yml
execution/job-scripts/: ospool_main.sh  test_job.sh  test_transfer_a.sh  test_transfer_b.sh
execution/submit-files/: patchwork.sub  patchwork_direct.sub  patchwork_v2.sub  test_job.sub  test_transfer_a.sub  test_transfer_b.sub
execution/workflows/: workflow.dag
ospool/: cli.py  config.py  fetch.py  monitor.py  osdf.py  remote.py  runs.py  stage.py  submit.py  token.py  upload.py  watcher.py
tools/: create_ospool_deck.py
